# cpp-SoftRenderer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  copydll.cmake  fetch_sdl.cmake
include/: base_renderer.hpp  camera.hpp  cpu_renderer.hpp  gpu_renderer.hpp  image.hpp  interactive.hpp  line.hpp  math.hpp  model.hpp  obj_loader.hpp  renderer.hpp  renderer_help.hpp  scanline.hpp  shader.hpp  texture.hpp
src/: main.cpp
src/example/: 1_draw_triangle.cpp  2_ortho.cpp  3_perspective.cpp  4_ortho_interactive.cpp  5_deep_test.cpp  6_perspective_interactive.cpp  7_texturemap_interactive.cpp  8_cube_interactive.cpp
